syntax = "proto3";

package mprpc;

message RpcHeader
{
    bytes service_name = 1;//服务的名字
    bytes method_name = 2;//方法的名字
    uint32 args_size = 3;//参数的大小长度
}